--- a/index.html
+++ b/index.html
@@ -15,35 +15,15 @@
     <br><br>
     <button id="search">Поиск</button>
   </form>
-
-  <div>
-    <h3>
-      По отдельности вроде сделал, не могу связать все вместе, HELP mi please :-(
-    </h3>
-  </div>
   
-  <div class="root">
-    
-  </div>
-  
-  <div class="root_2">
+  <div class="root"></div>
 
-  </div>
-
-
-
-
-
-
-
-
+  <div class="root_2"></div>
   
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.color-animation/1/mainfile"></script>
  -->
 
-
- <!-- <script src="script/script-hw.js"></script> -->
   <script src="script/data.js"></script>
   <script src="script/script.js"></script>
 </body>
